Work in progress commit to save changes

--- a/src/app/features/main/main.component.html
+++ b/src/app/features/main/main.component.html
@@ -1,14 +1,6 @@
-<!-- <nb-card [size]="'medium'" accent="info">
-	<nb-card-header>List inside nb-card</nb-card-header>
-	<nb-list>
-		<nb-list-item *ngFor="let team of (teams | async)?.data">
-			{{team.city}} - {{team.full_name}} - {{team.conference}}
-		</nb-list-item>
-	</nb-list>
-</nb-card> -->
-
-<nb-card>
+<nb-card [size]="'medium'">
 	<nb-card-body>
 		<nb-route-tabset [tabs]="tabs" fullWidth></nb-route-tabset>
 	</nb-card-body>
 </nb-card>
+<app-stats></app-stats>
