--- a/src/app/features/players/players.component.html
+++ b/src/app/features/players/players.component.html
@@ -1,3 +1,7 @@
-<p>
-players works!
-</p>
+<nb-list>
+	<nb-list-item *ngFor="let player of (players | async)?.data">
+		<nb-user size="medium" name="{{player.first_name}} {{player.last_name}}" title="Position: {{player.position}}"
+			picture="getPlayerImg(player.first_name,player.last_name) | async">
+		</nb-user>
+	</nb-list-item>
+</nb-list>
