--- a/src/themes.scss
+++ b/src/themes.scss
@@ -1,6 +1,8 @@
 @import '~@nebular/theme/styles/theming';
 @import '~@nebular/theme/styles/themes/default';
 
+$nb-enable-css-custom-properties: true;
+
 $nb-themes: nb-register-theme((
   // add your variables here like:
   // color-bg: #4ca6ff,
