--- a/src/app/features/players/players.component.html
+++ b/src/app/features/players/players.component.html
@@ -1,6 +1,6 @@
 <nb-list *ngIf="players$">
 	<nb-list-item *ngFor="let player of (players$ | async)">
-		<nb-user size="medium" name="{{player.first_name}} {{player.last_name}}" title="Position: {{player.position}}" [picture]="player.picture">
+		<nb-user class="" size="giant" name="{{player.first_name}} {{player.last_name}}" title="{{player.position}} at {{player.team?.full_name}}" [picture]="player.picture">
 		</nb-user> 
 	</nb-list-item>
 </nb-list>
