Added infinte scroll, but still need to check

--- a/src/app/features/main/main.component.html
+++ b/src/app/features/main/main.component.html
@@ -1,6 +1,6 @@
-<nb-card [size]="'medium'">
-	<nb-card-body>
-		<nb-route-tabset [tabs]="tabs" fullWidth></nb-route-tabset>
-	</nb-card-body>
+<nb-card [size]="'giant'">
+  <nb-card-body>
+    <nb-route-tabset [tabs]="tabs" fullWidth></nb-route-tabset>
+  </nb-card-body>
 </nb-card>
 <app-stats></app-stats>
