--- a/src/app/features/players/players.component.html
+++ b/src/app/features/players/players.component.html
@@ -1,9 +1,18 @@
-<nb-list *ngIf="players$" nbInfiniteList listenWindowScroll [threshold]="500" (bottomThreshold)="loadNext()">
-	<nb-list-item *ngFor="let player of (players$ | async); trackBy: trackByFn;">
-		<nb-user class="" size="giant" name="{{player.first_name}} {{player.last_name}}" title="{{player.position}} at {{player.team?.full_name}}"
-		 [picture]="player.picture">
-		</nb-user>
-	</nb-list-item>
+<nb-list
+  class="infinite"
+  nbInfiniteList
+  [threshold]="200"
+  (bottomThreshold)="loadNext()"
+>
+  <nb-list-item *ngFor="let player of players$ | async; trackBy: trackByFn">
+    <nb-user
+      size="giant"
+      name="{{ player.first_name }} {{ player.last_name }}"
+      title="{{ player.position }} at {{ player.team?.full_name }}"
+      [picture]="player.picture"
+    >
+    </nb-user>
+  </nb-list-item>
 </nb-list>
 
 <app-ghosts-players [ghosts]="ghosts"></app-ghosts-players>
