--- a/src/app/features/players/players.component.html
+++ b/src/app/features/players/players.component.html
@@ -1,9 +1,6 @@
-<nb-list
-  class="infinite"
-  nbInfiniteList
-  [threshold]="200"
-  (bottomThreshold)="loadNext()"
->
+<app-ghosts-players [ghosts]="ghosts"></app-ghosts-players>
+
+<nb-list nbInfiniteList [threshold]="500" (bottomThreshold)="loadNext()">
   <nb-list-item *ngFor="let player of players$ | async; trackBy: trackByFn">
     <nb-user
       size="giant"
@@ -14,5 +11,3 @@
     </nb-user>
   </nb-list-item>
 </nb-list>
-
-<app-ghosts-players [ghosts]="ghosts"></app-ghosts-players>
