Fixed: preserve scroll position

--- a/src/app/features/main/main.component.html
+++ b/src/app/features/main/main.component.html
@@ -1,11 +1,9 @@
-<div class="infinite-cards row">
-  <div class="col-md-12 col-lg-6 col-xxxl-6">
-    <nb-card class="own-scroll" size="giant">
-      <nb-card-body>
-        <nb-route-tabset [tabs]="tabs" fullWidth></nb-route-tabset>
-      </nb-card-body>
-    </nb-card>
-  </div>
+<div class="infinite-cards">
+  <nb-card class="own-scroll" size="giant">
+    <nb-card-body>
+      <nb-route-tabset [tabs]="tabs" fullWidth></nb-route-tabset>
+    </nb-card-body>
+  </nb-card>
 </div>
 
 <app-stats></app-stats>
