--- a/src/app/features/players/players.component.html
+++ b/src/app/features/players/players.component.html
@@ -1,5 +1,3 @@
-<app-ghosts-players [ghosts]="ghosts"></app-ghosts-players>
-
 <nb-list nbInfiniteList [threshold]="500" (bottomThreshold)="loadNext()">
   <nb-list-item *ngFor="let player of players$ | async; trackBy: trackByFn">
     <nb-user
@@ -9,5 +7,8 @@
       [picture]="player.picture"
     >
     </nb-user>
+  </nb-list-item>
+  <nb-list-item *ngFor="let _ of ghosts">
+    <app-ghosts-players></app-ghosts-players>
   </nb-list-item>
 </nb-list>
