--- a/src/app/features/main/main.component.scss
+++ b/src/app/features/main/main.component.scss
@@ -1,11 +1,6 @@
-nb-tabset {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
 nb-card-body {
   overflow: hidden;
+  padding: 0;
 }
 
 .infinite-cards {
