Trying to add global search

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nb-layout>
   <nb-layout-header fixed>
+    <app-search></app-search>
     <nb-actions class="left">
       <nb-action class="profile" [nbContextMenu]="items" nbContextMenuPlacement="bottom">Profile</nb-action>
       <nb-action>Settings</nb-action>
