Added icon to global search

--- a/src/app/shared/search/search.component.html
+++ b/src/app/shared/search/search.component.html
@@ -1,5 +1,5 @@
-<div class="form-group">
+<div class="ml-3">
   <input id="search" type="text" name="global-search" class="form-control" [(ngModel)]="playerAndTeamModel.id"
-    [ngbTypeahead]="search" [resultFormatter]="resultFormatListValue" [inputFormatter]="inputFormatListValue"
-    #instance="ngbTypeahead" />
+    [ngbTypeahead]="search" [resultFormatter]="resultFormatListValue" [inputFormatter]="inputFormatListValue" />
+  <nb-icon class="search-outline" icon="search-outline" pack="eva"></nb-icon>
 </div>
